--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,52 +1,18 @@
 @import "../abstracts/_variables";
-.navbar {
-  width: 100%;
-}
-.navbar_container {
-  background-color: $secondary-color;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
+@import "../abstratcs/_fonts";
+
+.heading {
+  background-color: #333;
+  color: $accent-color;
+  text-align: center;
+  padding: 20px 0;
 }
 
-.logo {
-  width: 50px;
-  height: 50px;
-}
-
-.nav-list {
-  display: flex;
-  list-style: none;
+.heading h1 {
+  color: $primary-color;
+  font-size: 32px;
+  font-family: $heading-font-family;
   margin: 0;
-  padding: 0;
-
-  li {
-    margin-left: 20px;
-  }
-
-  li a {
-    text-decoration: none;
-    color: $bar-color;
-  }
-  li a:hover {
-    background-color: $hover_menu;
-    font-weight: bold;
-    border-radius: 15px;
-  }
-}
-
-.menu-toggle {
-  display: none;
-  flex-direction: column;
-  cursor: pointer;
-
-  .bar {
-    width: 25px;
-    height: 3px;
-    background-color: $bar-color;
-    margin: 3px 0;
-  }
 }
 
 @media (max-width: 768px) {
