--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 @use "fonts";
 
 $primary-color: #4b008d;
-$secondary-color: #000c8ad6;
+$secondary-color: #0c8bd6;
 $accent-color: #fafafa;
 $color: #000000;
 $heading-font-family: "raleway-bold";
