--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,5 +1,5 @@
 @import "../abstracts/_variables";
-@import "../abstratcs/_fonts";
+@import "../abstracts/_fonts";
 
 .heading {
   background-color: #333;
