--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,1 +1,18 @@
-@use "../abstracts/variables" as v;
+
+body {
+    font-family:'Raleway', sans-serif;
+    color:  #333;
+    background-color:  #fff;
+    margin: 0;
+    padding: 20px;
+    box-sizing: border-box;
+  }
+  
+  header.heading {
+    text-align: center;
+    margin-bottom: 20px;
+  
+    h1 {
+      color: #007bff;
+    }
+  }
