--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,11 +1,9 @@
-// @import "./components/index";
-// @import "./abstratcs/index";
-// @import "./base/index";
-// @import "./pages/";
-// Import other Sass files
-@import 'components/index';
-@import '_abstracts';
-@import '_base';
-@import '_pages';
 
+@charset "UTF-8";
 
+//have to include all of these otherwise main.css will be empty
+//We do not create styles in here
+
+@use 'abstracts';
+@use 'base';
+@use 'components';
