--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,8 +1,9 @@
 @use "fonts";
 
-$primary-color: #4b008d;
-$secondary-color: #0c8bd6;
+$primary-color: #fafafa;
+$secondary-color: #c7bcbc;
 $accent-color: #fafafa;
+$bg-color: #820404;
 $color: #000000;
 $heading-font-family: "raleway-bold";
 $body-font-family: "raleway-regular";
