--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -2,7 +2,7 @@
 @import "../abstracts/_fonts";
 
 .heading {
-  background-color: #333;
+  background-color: $bg-color;
   color: $accent-color;
   text-align: center;
   padding: 20px 0;
