--- a/css/main.css
+++ b/css/main.css
@@ -1,133 +1,43 @@
 @import url("https://fonts.googleapis.com/css2?family=raleway&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=raleway&display=swap");
 @use "fonts";
-.container {
-  max-width: 1280px;
-  margin: auto; }
-
-.footer {
+.copyright {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  background-color: #0c8bd6;
-  height: auto; }
-  .footer__social-links {
-    flex: 1 1 0px;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    justify-items: flex-start;
-    background-image: url("../images/contact-pic.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    min-height: 300px;
-    background-position: center center; }
-  .footer .social-icon {
-    width: 42px;
-    height: 42px;
-    margin-bottom: 10px;
-    margin-left: 50px; }
-  .footer__copyright {
-    background-color: #4b008d;
-    text-align: center;
-    color: white;
-    padding: 20px;
-    font-family: "raleway-bold";
-    font-size: 20px;
-    font-weight: bold; }
-  .footer__contact-form {
-    width: 100%;
-    min-width: 400px;
-    padding: 20px;
-    justify-content: center;
-    justify-self: center;
-    justify-items: center;
-    align-items: center;
-    align-content: center;
-    align-self: center;
-    margin: auto;
-    display: flex;
-    flex: 1 1 0px; }
-    .footer__contact-form .footer {
-      display: flex;
-      flex-direction: row;
-      background-color: #1e1e1e;
-      height: auto; }
-      .footer__contact-form .footer__social-links {
-        object-fit: cover;
-        display: flex;
-        justify-content: center;
-        align-items: flex-end;
-        justify-items: flex-start;
-        margin-left: 50px;
-        background-image: url("../images/contact-pic.png");
-        background-position: center center;
-        background-repeat: none; }
-      .footer__contact-form .footer .social-icon {
-        width: 42px;
-        height: 42px;
-        margin-bottom: 10px;
-        margin-left: 50px; }
-      .footer__contact-form .footer__contact-form {
-        width: 100%;
-        justify-content: center;
-        justify-self: center;
-        justify-items: center;
-        align-items: center;
-        align-content: center;
-        align-self: center;
-        margin: auto;
-        display: flex;
-        background-color: white; }
-        .footer__contact-form .footer__contact-form input[type="submit"] {
-          background-color: #af0000;
-          color: #fff;
-          padding: 12px 20px;
-          border: none;
-          border-radius: 4px;
-          cursor: pointer;
-          font-size: 30px;
-          width: 100%; }
-        .footer__contact-form .footer__contact-form label {
-          display: block;
-          font-weight: 600; }
-        .footer__contact-form .footer__contact-form input[type="submit"]:hover {
-          background-color: #4a4a4a;
-          font-weight: bold;
-          color: #fff; }
-    .footer__contact-form #contact_form {
-      width: 100%; }
-    .footer__contact-form input[type="submit"] {
-      background-color: #af0000;
-      color: #fff;
-      padding: 12px 20px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      width: 100%;
-      font-size: 30px; }
-    .footer__contact-form label {
-      display: block;
-      font-weight: 600;
-      color: white; }
-    .footer__contact-form input, .footer__contact-form select, .footer__contact-form textarea {
-      width: 100%; }
-    .footer__contact-form input[type="submit"]:hover {
-      background-color: #4a4a4a;
-      font-weight: bold;
-      color: #fff; }
+  background-color: #820404;
+  height: auto;
+  padding: 10px 10px;
+  justify-content: center;
+  font-weight: bold;
+  color: #c7bcbc;
+  font-family: "raleway-bold"; }
 
 @use "../abstracts" as a;
+#quiz-container {
+  background-image: url(/images/bg.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #fafafa;
+  width: 100%;
+  height: 100%; }
+
+#quiz-form {
+  padding: 14px 5px;
+  font-family: "raleway-regular";
+  align-items: center;
+  justify-items: center; }
+
 @use "fonts";
 @use "mixins" as m;
 .heading {
-  background-color: #333;
+  background-color: #820404;
   color: #fafafa;
   text-align: center;
   padding: 20px 0; }
 
 .heading h1 {
-  color: #4b008d;
+  color: #fafafa;
   font-size: 32px;
   font-family: "raleway-bold";
   margin: 0; }
